--- a/notebook/data/2. MODEL TRAINING.ipynb
+++ b/notebook/data/2. MODEL TRAINING.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "b080dfb2",
    "metadata": {},
    "outputs": [
@@ -31,7 +31,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 15\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmetrics\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m r2_score, mean_absolute_error, mean_squared_error\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodel_selection\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m RandomizedSearchCV\n\u001b[1;32m---> 15\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcatboost\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m CatBoostRegressor\n\u001b[0;32m     16\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mxgboost\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m XGBRegressor\n\u001b[0;32m     17\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mwarnings\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[12], line 15\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmetrics\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m r2_score, mean_absolute_error, mean_squared_error\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodel_selection\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m RandomizedSearchCV\n\u001b[1;32m---> 15\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcatboost\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m CatBoostRegressor\n\u001b[0;32m     17\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mxgboost\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m XGBRegressor\n\u001b[0;32m     18\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mwarnings\u001b[39;00m\n",
       "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'catboost'"
      ]
     }
@@ -52,8 +52,55 @@
     "from sklearn.metrics import r2_score, mean_absolute_error, mean_squared_error\n",
     "from sklearn.model_selection import RandomizedSearchCV\n",
     "from catboost import CatBoostRegressor\n",
+    "\n",
     "from xgboost import XGBRegressor\n",
     "import warnings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "9dea9c55",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: catboost in c:\\users\\ask\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (1.2.5)\n",
+      "Requirement already satisfied: plotly in c:\\users\\ask\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from catboost) (5.22.0)\n",
+      "Requirement already satisfied: scipy in c:\\users\\ask\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from catboost) (1.13.1)\n",
+      "Requirement already satisfied: matplotlib in c:\\users\\ask\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from catboost) (3.9.1)\n",
+      "Requirement already satisfied: numpy>=1.16.0 in c:\\users\\ask\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from catboost) (1.26.4)\n",
+      "Requirement already satisfied: pandas>=0.24 in c:\\users\\ask\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from catboost) (2.2.2)\n",
+      "Requirement already satisfied: six in c:\\users\\ask\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from catboost) (1.16.0)\n",
+      "Requirement already satisfied: graphviz in c:\\users\\ask\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from catboost) (0.20.3)\n",
+      "Requirement already satisfied: tenacity>=6.2.0 in c:\\users\\ask\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from plotly->catboost) (8.5.0)\n",
+      "Requirement already satisfied: packaging in c:\\users\\ask\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from plotly->catboost) (24.1)\n",
+      "Requirement already satisfied: pillow>=8 in c:\\users\\ask\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from matplotlib->catboost) (10.4.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\ask\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from matplotlib->catboost) (2.9.0.post0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\ask\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from matplotlib->catboost) (3.1.2)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\ask\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from matplotlib->catboost) (0.12.1)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\ask\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from matplotlib->catboost) (1.2.1)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in c:\\users\\ask\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from matplotlib->catboost) (1.4.5)\n",
+      "Requirement already satisfied: importlib-resources>=3.2.0; python_version < \"3.10\" in c:\\users\\ask\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from matplotlib->catboost) (6.4.0)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\ask\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from matplotlib->catboost) (4.53.1)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\ask\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from pandas>=0.24->catboost) (2024.1)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\ask\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from pandas>=0.24->catboost) (2024.1)\n",
+      "Requirement already satisfied: zipp>=3.1.0; python_version < \"3.10\" in c:\\users\\ask\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from importlib-resources>=3.2.0; python_version < \"3.10\"->matplotlib->catboost) (3.19.2)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: You are using pip version 20.2.3; however, version 24.1.2 is available.\n",
+      "You should consider upgrading via the 'c:\\users\\ask\\appdata\\local\\programs\\python\\python39\\python.exe -m pip install --upgrade pip' command.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install catboost"
    ]
   },
   {
